@@ -2,6 +2,7 @@
 
 Added IDefaultProvider
 Added PropertyFileDefaultProvider
+Showing required parameters in the usage
 
 1.2
 2010/08/25
